--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ pytest-cov = "^2.12.1"
 [tool.isort]
 profile = "black"
 
+[tool.pylint.master]
+ignore = []
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
