--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pre-commit = "^2.15.0"
 isort = "^5.9.3"
 pytest = "^6.2.5"
 pytest-cov = "^2.12.1"
+pyinstaller = "^4.5.1"
 
 [tool.isort]
 profile = "black"
