--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [ 3.8, 3.9 ]
+        python-version: [ 3.9 ]
         os: [ ubuntu-latest, macOS-latest, windows-latest ]
     steps:
       - uses: actions/checkout@v2
@@ -41,14 +41,16 @@ jobs:
       - name: Get full python version
         id: full-python-version
         run: |
-          echo ::set-output name=VERSION::$(python -c "import sys; print('-'.join(str(v) for v in sys.version_info[:3]))")
+          echo ::set-output name=VERSION::$(python -c "import sys; print('.'.join(str(v) for v in sys.version_info[:2]))")
 
       - name: Set up Poetry
         run: |
           curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python3 - -y
 
       - name: Add poetry to path
-        run: echo "$HOME/Library/Python/${{ steps.full-python-version.VERSION }}/bin" >> $GITHUB_PATH
+        run: |
+          echo "test $HOME/Library/Python/${{ steps.full-python-version.VERSION }}/bin"
+          echo "$HOME/Library/Python/${{ steps.full-python-version.VERSION }}/bin" >> $GITHUB_PATH
 
       - name: Configure poetry
         run: poetry config virtualenvs.in-project true
