--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -31,6 +31,7 @@ jobs:
       matrix:
         python-version: [ 3.9 ]
         os: [ ubuntu-latest, macOS-latest, windows-latest ]
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -47,10 +48,9 @@ jobs:
         run: |
           curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python3 - -y
 
-      - name: Add poetry to path
+      - name: Print os
         run: |
-          echo "test $HOME/Library/Python/${{ steps.full-python-version.VERSION }}/bin"
-          echo "$HOME/Library/Python/${{ steps.full-python-version.VERSION }}/bin" >> $GITHUB_PATH
+          echo "Mooo ${{ matrix.python-version }} ${{ matrix.os }} ${{ steps.full-python-version.VERSION }}"
 
       - name: Configure poetry
         run: poetry config virtualenvs.in-project true
