--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -48,9 +48,17 @@ jobs:
         run: |
           curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python3 - -y
 
-      - name: Print os
-        run: |
-          echo "Mooo ${{ matrix.python-version }} ${{ matrix.os }} ${{ steps.full-python-version.VERSION }}"
+      - name: Add poetry to path (Windows)
+        if: ${{ matrix.os }} == "windows-latest"
+        run: echo "$APPDATA\Python\Scripts" >> $GITHUB_PATH"
+
+      - name: Add poetry to path (MacOS)
+        if: ${{ matrix.os }} == "macOS-latest"
+        run: echo "$HOME\Library\Python${{ matrix.python-version }}\bin >> $GITHUB_PATH"
+
+      - name: Add poetry to path (Linux)
+        if: ${{ matrix.os }} == "ubuntu-latest"
+        run: echo "$HOME\.local/bin >> $GITHUB_PATH"
 
       - name: Configure poetry
         run: poetry config virtualenvs.in-project true
