--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -73,4 +73,4 @@ jobs:
         run: poetry install
 
       - name: Test with pytest
-        run: poetry run pytest -v
+        run: poetry run pytest tests/test_db_temperature_distribution.py -v
