--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Configure poetry
         run: |
           poetry config virtualenvs.in-project true
-          poetry env use ${{ matrix.os }}
+          poetry env use ${{ matrix.python-version }}
 
       - name: Set up cache
         uses: actions/cache@v2
