--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -42,7 +42,8 @@ jobs:
       - name: Get full python version
         id: full-python-version
         run: |
-          echo ::set-output name=VERSION::$(python -c "import sys; print('.'.join(str(v) for v in sys.version_info[:2]))")
+          echo python -c "import sys; print('.'.join(str(v) for v in sys.version_info[:2]))"
+          echo python -c "import sys; print(sys.executable
 
       - name: Set up Poetry
         run: |
@@ -63,7 +64,6 @@ jobs:
       - name: Configure poetry
         run: |
           poetry config virtualenvs.in-project true
-          poetry env use ${{ matrix.python-version }}
 
       - name: Set up cache
         uses: actions/cache@v2
