--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [ 3.9 ]
+        python-version: [ 3.8, 3.9 ]
         os: [ ubuntu-latest, macOS-latest, windows-latest ]
       fail-fast: false
     steps:
