--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,6 +2,7 @@
 
 name: Run Tests
 on:
+  push:
   pull_request:
     branches:
       - master
@@ -11,21 +12,13 @@ defaults:
     shell: bash
 
 jobs:
-  linting:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8
-          flake8 --count --exit-zero --max-complexity=10 --max-line-length=96 --statistics
+  call-linting:
+    uses: ./.github/workflows/run-linting.yml
+    with:
+      os: "ubuntu-latest"
+      python-version: 3.8
   tests:
-    needs: linting
+    needs: call-linting
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
