--- a/.github/workflows/run-build.yml
+++ b/.github/workflows/run-build.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         python-version: [ 3.9 ]
         os: [ windows-latest, macOS-latest, ubuntu-latest ]
-      fail-fast: true
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -53,7 +53,7 @@ jobs:
 
       - name: Build with Poetry
         run: |
-          poetry run build
+          poetry build
           ls
           ls dist
 
