add quotes, fix non windows pyinstaller path

--- a/.github/workflows/run-build.yml
+++ b/.github/workflows/run-build.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Get executable name
         id: exe-name
-        run: echo ::set-output name=NAME::"$(poetry version)"
+        run: echo ::set-output name=NAME::$(poetry version)
 
       - name: Add pyinstaller to path (Windows)
         if: ${{ matrix.os == 'windows-latest' }}
@@ -64,10 +64,10 @@ jobs:
 
       - name: Add pyinstaller to path (MacOS or Ubuntu)
         if: ${{ matrix.os != 'windows-latest' }}
-        run: echo ".venv/scripts" >> $GITHUB_PATH
+        run: echo ".venv/bin" >> $GITHUB_PATH
 
       - name: Create executable with Pyinstaller
-        run: pyinstaller main.py --onefile --name ${{ steps.exe-name.outputs.NAME }}
+        run: pyinstaller main.py --onefile --name "${{ steps.exe-name.outputs.NAME }}"
 
       - name: Test executable
         run: pytest tests/test_executable.py -v
