--- a/.github/workflows/run-build.yml
+++ b/.github/workflows/run-build.yml
@@ -49,15 +49,12 @@ jobs:
         id: git-tag
         run: echo ::set-output name=TAG::${GITHUB_REF#refs/*/}
 
-      - name: Print tags
-        run: |
-          echo POETRY ${{ steps.poetry-tag.outputs.TAG }}
-          echo GIT ${{ steps.git-tag.outputs.TAG }}
-
       - name: Validate tag
         run: |
-          poetryTag="${{ steps.poetry-tag.outputs.TAG }}"
-          gitTag="${{ steps.git-tag.outputs.TAG }}"
+          poetryTag=${{ steps.poetry-tag.outputs.TAG }}
+          gitTag=${{ steps.git-tag.outputs.TAG }}
+          echo POETRY $poetryTag
+          echo GIT $gitTag
           python -c "import sys; eq='$poetryTag'!='$gitTag'; sys.exit(int(eq))"
           exit $?
 
@@ -78,7 +75,7 @@ jobs:
 
       - name: Get executable name
         id: exe-name
-        run: echo ::set-output name=NAME::$(poetry version) - ${{ format(matrix.os) }}
+        run: echo ::set-output name=NAME::$(python ./get_exe_name.py)
 
       - name: Add pyinstaller to path (Windows)
         if: ${{ matrix.os == 'windows-latest' }}
