--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "db-temperature-distribution"
-version = "0.1.4"
+version = "0.1.0"
 description = ""
 authors = ["Vojtech Panek <vojtech.panek@designbuilder.co.uk>"]
 
@@ -9,7 +9,7 @@ python = "^3.8"
 eppy = "^0.5.56"
 
 [tool.poetry.dev-dependencies]
-black = {version = "^21.8b0", python = "^3.6.8"}
+black = {version = "^21.8b0"}
 flake8 = "^3.9.2"
 pylint = "^2.10.2"
 pre-commit = "^2.15.0"
